--- a/diccionarioPrueba/Base.lproj/Main.storyboard
+++ b/diccionarioPrueba/Base.lproj/Main.storyboard
@@ -314,24 +314,27 @@
         <!--Responde Rápido-->
         <scene sceneID="ciD-Z9-hXH">
             <objects>
-                <viewController id="38h-4q-ssO" sceneMemberID="viewController">
-                    <view key="view" contentMode="scaleToFill" ambiguous="YES" id="JyE-rb-NXj">
+                <viewController id="38h-4q-ssO" customClass="RespondeInstruccionesViewController" customModule="diccionarioPrueba" customModuleProvider="target" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="JyE-rb-NXj">
                         <rect key="frame" x="0.0" y="0.0" width="1024" height="768"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" verticalCompressionResistancePriority="747" ambiguous="YES" image="respondeNI" translatesAutoresizingMaskIntoConstraints="NO" id="d0h-BV-wbf">
-                                <rect key="frame" x="136.5" y="158" width="626" height="170"/>
+                            <button opaque="NO" contentMode="scaleToFill" verticalHuggingPriority="248" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="jRw-SF-xqc">
+                                <rect key="frame" x="491" y="639.5" width="43" height="11"/>
                                 <constraints>
-                                    <constraint firstAttribute="height" constant="170" id="7d8-46-nUt"/>
-                                    <constraint firstAttribute="width" constant="626" id="uud-hH-nmu"/>
-                                    <constraint firstAttribute="width" relation="greaterThanOrEqual" constant="600" id="yhB-8o-h25"/>
+                                    <constraint firstAttribute="height" constant="11" id="8Dx-BZ-M6B"/>
+                                    <constraint firstAttribute="width" secondItem="jRw-SF-xqc" secondAttribute="height" multiplier="39:10" id="vBD-UM-TWq"/>
                                 </constraints>
-                            </imageView>
-                            <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" verticalHuggingPriority="246" ambiguous="YES" editable="NO" textAlignment="justified" selectable="NO" translatesAutoresizingMaskIntoConstraints="NO" id="hXa-MV-PX2">
-                                <rect key="frame" x="185" y="358" width="529.5" height="290"/>
+                                <state key="normal" title="Jugar"/>
+                                <connections>
+                                    <segue destination="iqf-mV-rzn" kind="show" id="B8C-Vp-P4j"/>
+                                </connections>
+                            </button>
+                            <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" verticalHuggingPriority="246" editable="NO" textAlignment="justified" selectable="NO" translatesAutoresizingMaskIntoConstraints="NO" id="hXa-MV-PX2">
+                                <rect key="frame" x="111" y="261" width="803" height="348.5"/>
                                 <color key="backgroundColor" red="0.97580105433772724" green="1" blue="0.90074633158960782" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
                                 <constraints>
-                                    <constraint firstAttribute="width" secondItem="hXa-MV-PX2" secondAttribute="height" multiplier="199:109" id="DdV-65-gIg"/>
+                                    <constraint firstAttribute="width" secondItem="hXa-MV-PX2" secondAttribute="height" multiplier="735:319" id="tL8-kA-ehW"/>
                                 </constraints>
                                 <string key="text">Bienvenido al mini juego “Responde rápido”.
 
@@ -343,50 +346,34 @@ Como jugador tendrás tres oportunidades de fallar, al seleccionar una opción i
                                 <fontDescription key="fontDescription" name="ChalkboardSE-Regular" family="Chalkboard SE" pointSize="17"/>
                                 <textInputTraits key="textInputTraits" autocapitalizationType="sentences"/>
                             </textView>
-                            <button opaque="NO" contentMode="scaleToFill" verticalHuggingPriority="248" ambiguous="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="jRw-SF-xqc">
-                                <rect key="frame" x="430.5" y="658" width="39" height="10"/>
+                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" verticalCompressionResistancePriority="747" image="respondeNI2" translatesAutoresizingMaskIntoConstraints="NO" id="d0h-BV-wbf">
+                                <rect key="frame" x="192" y="107" width="640" height="134"/>
                                 <constraints>
-                                    <constraint firstAttribute="height" constant="10" id="VB4-cf-wcq"/>
+                                    <constraint firstAttribute="width" secondItem="d0h-BV-wbf" secondAttribute="height" multiplier="626:131" id="wNf-Ao-VUC"/>
                                 </constraints>
-                                <state key="normal" title="Jugar"/>
-                                <connections>
-                                    <segue destination="iqf-mV-rzn" kind="show" id="B8C-Vp-P4j"/>
-                                </connections>
-                            </button>
-                            <navigationBar contentMode="scaleToFill" verticalHuggingPriority="252" verticalCompressionResistancePriority="751" ambiguous="YES" translatesAutoresizingMaskIntoConstraints="NO" id="7v4-Wj-ejv">
-                                <rect key="frame" x="0.0" y="64" width="899.5" height="44"/>
-                            </navigationBar>
-                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="wws-Es-UDu">
-                                <rect key="frame" x="54" y="71" width="70" height="30"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                                <state key="normal" title="&lt; Juegos"/>
-                                <connections>
-                                    <segue destination="Qfb-95-3Xu" kind="unwind" unwindAction="unwindWithUnwindSegue:" id="9KZ-ho-7m1"/>
-                                </connections>
-                            </button>
+                            </imageView>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                         <constraints>
-                            <constraint firstItem="hXa-MV-PX2" firstAttribute="top" secondItem="d0h-BV-wbf" secondAttribute="bottom" constant="30" id="9Td-EL-IOT"/>
-                            <constraint firstItem="d0h-BV-wbf" firstAttribute="top" secondItem="7v4-Wj-ejv" secondAttribute="bottom" constant="50" id="CrY-t1-3Us"/>
-                            <constraint firstItem="hXa-MV-PX2" firstAttribute="leading" secondItem="ZiB-Az-EAL" secondAttribute="leading" constant="185" id="DHQ-3B-cIJ"/>
-                            <constraint firstItem="7v4-Wj-ejv" firstAttribute="leading" secondItem="JyE-rb-NXj" secondAttribute="leading" id="Gzj-qs-GzQ"/>
-                            <constraint firstItem="7v4-Wj-ejv" firstAttribute="top" secondItem="ZiB-Az-EAL" secondAttribute="top" id="K8k-Ch-3vp"/>
-                            <constraint firstItem="jRw-SF-xqc" firstAttribute="centerX" secondItem="hXa-MV-PX2" secondAttribute="centerX" id="Klj-Wx-ArU"/>
-                            <constraint firstItem="hXa-MV-PX2" firstAttribute="centerX" secondItem="d0h-BV-wbf" secondAttribute="centerX" id="MiX-cK-7Ko"/>
-                            <constraint firstItem="ZiB-Az-EAL" firstAttribute="bottom" secondItem="jRw-SF-xqc" secondAttribute="bottom" constant="100" id="NcP-uF-d8r"/>
-                            <constraint firstItem="7v4-Wj-ejv" firstAttribute="centerX" secondItem="d0h-BV-wbf" secondAttribute="centerX" id="UFq-oz-p2Q"/>
-                            <constraint firstItem="hXa-MV-PX2" firstAttribute="centerX" secondItem="JyE-rb-NXj" secondAttribute="centerX" id="fs4-84-gEJ"/>
-                            <constraint firstItem="jRw-SF-xqc" firstAttribute="top" secondItem="hXa-MV-PX2" secondAttribute="bottom" constant="10" id="jRX-Cl-Czy"/>
+                            <constraint firstItem="hXa-MV-PX2" firstAttribute="top" secondItem="d0h-BV-wbf" secondAttribute="bottom" constant="20" id="432-hJ-k06"/>
+                            <constraint firstItem="jRw-SF-xqc" firstAttribute="centerX" secondItem="JyE-rb-NXj" secondAttribute="centerX" id="JrV-pd-U0x"/>
+                            <constraint firstItem="hXa-MV-PX2" firstAttribute="leading" secondItem="ZiB-Az-EAL" secondAttribute="leading" constant="111" id="MLx-UL-i7H"/>
+                            <constraint firstItem="d0h-BV-wbf" firstAttribute="top" secondItem="ZiB-Az-EAL" secondAttribute="top" constant="43" id="T8s-xH-Cl0"/>
+                            <constraint firstItem="hXa-MV-PX2" firstAttribute="centerX" secondItem="JyE-rb-NXj" secondAttribute="centerX" id="aHp-4A-iC3"/>
+                            <constraint firstItem="d0h-BV-wbf" firstAttribute="centerX" secondItem="JyE-rb-NXj" secondAttribute="centerX" id="mPU-1s-4uC"/>
+                            <constraint firstItem="jRw-SF-xqc" firstAttribute="top" secondItem="hXa-MV-PX2" secondAttribute="bottom" constant="30" id="mRW-vA-KeT"/>
                         </constraints>
                         <viewLayoutGuide key="safeArea" id="ZiB-Az-EAL"/>
                     </view>
                     <navigationItem key="navigationItem" title="Responde Rápido" id="QZc-Db-ggF"/>
+                    <connections>
+                        <segue destination="Qfb-95-3Xu" kind="unwind" identifier="back" unwindAction="unwindWithUnwindSegue:" id="nEf-3G-CiV"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="nX4-zs-Rxa" userLabel="First Responder" sceneMemberID="firstResponder"/>
                 <exit id="Qfb-95-3Xu" userLabel="Exit" sceneMemberID="exit"/>
             </objects>
-            <point key="canvasLocation" x="2232" y="-1728"/>
+            <point key="canvasLocation" x="2231.8359375" y="-1728.125"/>
         </scene>
         <!--ControllerJ3 Instrucciones-->
         <scene sceneID="Eig-zA-P94">
@@ -1123,9 +1110,9 @@ Iconos de los logos de los juegos
         <image name="memoNI3" width="511" height="151"/>
         <image name="pacman" width="26" height="26"/>
         <image name="people_" width="26" height="26"/>
-        <image name="respondeNI" width="640" height="225"/>
+        <image name="respondeNI2" width="640" height="131"/>
     </resources>
     <inferredMetricsTieBreakers>
-        <segue reference="eFu-IA-9de"/>
+        <segue reference="IEZ-ft-g7R"/>
     </inferredMetricsTieBreakers>
 </document>
